api/openshift/tools/metabase/OCP4/metabase-deploy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: metabase
  name: metabase
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: metabase
    deploymentconfig: metabase
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: metabase
        deploymentconfig: metabase
      name: metabase
    spec:
      containers:
        - command:
            - bash
            - '-c'
            - >-
              cd /app && if [[ $PR_ENVIRONMENT == 'true' ]]; then tail -f
              /dev/null; else java -jar metabase.jar; fi
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 1200
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1200
          name: metabase
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1200
          resources:
            limits:
              cpu: '1'
              memory: 3Gi
            requests:
              cpu: 500m
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - metabase
        from:
          kind: ImageStreamTag
          name: 'metabase:latest'
          namespace: 7068ad-tools
      type: ImageChange
    - type: ConfigChange
