api/openshift/tools/metabase/OCP4/metabase.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: metabase
  namespace: 7068ad-dev
  labels:
    app: metabase
    app.kubernetes.io/component: metabase
    app.kubernetes.io/instance: metabase
    app.kubernetes.io/part-of: metabase
    app.openshift.io/runtime-version: latest
    role: app
spec:
  host: metabase-7068ad-dev.apps.silver.devops.gov.bc.ca
  path: /
  to:
    kind: Service
    name: metabase
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
